fix date shown on blog posts

--- a/src/_includes/components/post-header-single.njk
+++ b/src/_includes/components/post-header-single.njk
@@ -8,7 +8,7 @@
             <div class="col-12 col-md-auto mr-4">
                 <h5 class="text-medium">
                     <i class="fa fa-calendar fa-fw mr-1 text-primary" aria-hidden="true"></i>
-                    <time datetime="{{ post.date | date('') }}">{{ post.date | date('MMMM DD, YYYY') }}</time>
+                    <time datetime="{{ page.date | date('') }}">{{ page.date | date('MMMM DD, YYYY') }}</time>
                 </h5>
             </div>
 
