replace old google analytics with new gtag.js

--- a/src/_includes/components/site-head.njk
+++ b/src/_includes/components/site-head.njk
@@ -12,6 +12,17 @@
 <meta name="robots" content="index,follow">
 <meta name="generator" content="Eleventy">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{ site.google_analytics }}');
+</script>
+
+
 {% block seo %}
 <!--Twitter Card-->
 <meta name="twitter:card" content="summary">
