adjust site data to use current year (during build) for copyright

--- a/src/_includes/components/site-footer.njk
+++ b/src/_includes/components/site-footer.njk
@@ -7,7 +7,7 @@
                 {% include "components/nav-links.njk" %}
             </ul>
 
-            <small class="navbar-text text-muted font-italic px-sm-3">Copyright &copy; <a class="text-light" href="{{ site.url }}">{{ site.title }}</a> 2012-2020.</small>
+            <small class="navbar-text text-muted font-italic px-sm-3">Copyright &copy; <a class="text-light" href="{{ site.url }}">{{ site.title }}</a> {{ site.copyright }}.</small>
 
             <a href="#top" title="Back to Top" class="btn btn-sm btn-medium d-sm-none">
                 <i class="fas fa-arrow-up" aria-hidden="true"></i>
